TrainingStaging/force-app/main/default/objects/Feedback__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select Attendee record for feedback</description>
    <label>attendee</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>