TrainingStaging/force-app/main/default/objects/Feedback__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>give rating to the attended session</description>
    <label>Rating</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>