TrainingStaging/force-app/main/default/objects/Feedback__c/fields/Training_Session__c.field-meta.xml
<CustomField>
    <fullName>Training_Session__c</fullName>
    <description>Select session record for feedbac</description>
    <label>Training Session</label>
    <referenceTo>Training_Session__c</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>